--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Welcome to the Maze Runner's homepage!
-description: Feel free to bookmark this to keep an eye on my project updates
+title: Welcome to the Robot Gang's homepage!
+description: Feel free to bookmark this to keep an eye on our project updates
